diss: hierarchical models, objections to ip

--- a/defs.tex
+++ b/defs.tex
@@ -74,6 +74,7 @@
 \newcommand{\modus}{\operatorname{mode}} % Mode
 \newcommand{\logit}{\operatorname{logit}} % logit
 \newcommand{\posi}{\operatorname{posi}} % positive cone
+\newcommand{\lik}{\operatorname{lik}} % likelihood function
 
 \def\El{\ul{\E}}
 \def\Eu{\ol{\E}}
