--- a/intro.tex
+++ b/intro.tex
@@ -41,7 +41,8 @@ under use of \textcite[\S 2.3]{itip-statinf} for the last paragraph in
 Sec.~\ref{sec:motivation:bayesian-foundational},
 and Sections~\ref{sec:motivation:near-ignorance} and \ref{sec:motivation:pdc}.
 
-Section~\ref{sec:ip-alternatives} uses parts of \textcite[\S 2.2, 2.4]{itip-statinf}.
+Section~\ref{sec:ip-alternatives} uses parts of \textcite[\S 2.2, 2.4]{itip-statinf},
+and a paragraph from \textcite[\S 7]{itip-statinf}.
 
 Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf},
 which was written primarily by Gero Walter.****
