diss: football example

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -310,3 +310,12 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   pages = {43--65},
 }
 
+@article{2000:rue,
+  author = {H\r{a}vard Rue and {\O}yvind Salvesen},
+  title = {Prediction and Retrospective Analysis of Soccer Matches in a League},
+  journal = {Journal of the Royal Statistical Society. Series D},
+  year = {2000},
+  volume = {49},
+  pages = {399--418},
+}
+
