--- a/defs.tex
+++ b/defs.tex
@@ -89,3 +89,4 @@
 \newcommand{\be}{\operatorname{Beta}}   % Beta Distribution
 \newcommand{\B}{\operatorname{B}}   % Beta Function
 \newcommand{\dir}{\operatorname{Dir}}   % Dirichlet Distribution
+\newcommand{\po}{\operatorname{Po}}   % Poisson Distribution
