--- a/diss.tex
+++ b/diss.tex
@@ -62,9 +62,7 @@
 %\part{Generalised Bayesian Inference with Sets of Priors}
   \include{genbayesinf}
   \include{setsofconjugatepriors}
-  %\include{kap_02}
-  %\include{kap_03}
-  %\include{kap_04} usw.
+  \include{football}
   
   \begin{appendix}
   \include{appendix1}
