diss: general stuff and structure

--- a/diss.tex
+++ b/diss.tex
@@ -26,8 +26,7 @@
 
 
   \LMUTitle
-      {Generalized Bayesian Inference under Prior-Data Conflict\\
-       ***eventuell mit Untertitel***}         % Titel der Arbeit
+      {Generalized Bayesian Inference under Prior-Data Conflict}         % Titel der Arbeit
       {Gero Walter     }                       % Vor- und Nachname des Autors
       {T\"ubingen}                             % Geburtsort des Autors
       {Fakult\"at f\"ur Mathematik, Informatik und Statistik} % Name der Fakultaet
@@ -62,7 +61,10 @@
 %\part{Generalised Bayesian Inference with Sets of Priors}
   \include{genbayesinf}
   \include{setsofconjugatepriors}
+  \include{jstp}
+  \include{isipta11}
   \include{football}
+  \include{concluding}
   
   \begin{appendix}
   \include{appendix1}
