--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-
+\label{cha:intro}
 
 %\begin{itemize}
 %\item overview/outline, which paper used where\ldots
@@ -46,6 +46,10 @@ and a paragraph from \textcite[\S 7]{itip-statinf}.
 
 Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf},
 which was written primarily by Gero Walter.****
+
+***Section~\ref{sec:jstp} is an abriged version of \textcite{Walter2009a}.***
+
+***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a}.***
 
 \section{Notation}
 \label{sec:notation}
