--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -530,6 +530,10 @@ which were already used in \textcite{Walter2007a} to generalize Bayesian linear 
 \section{***Alternative Models Based on Sets of Priors}
 \label{sec:alternatives}
 
+***to concluding remarks chapter?***
+
+\bigskip
+
 ***comparison with other approaches based on sets of probability distributions:***
 
 \bigskip
@@ -552,14 +556,15 @@ but the general framework also allows for imprecise sampling models \parencite[s
 also discussed under the notion of \emph{likelihood robustness} \parencite[e.g.,][]{2000:shyamalkumar} in the robust Bayesian framework.
 
 
-***discusse these approaches some more?***
+***discuss these approaches some more?***
 
 
 
 
 \bigskip
 
-par on whitcomb, then rewrite this:
+***short discussion of work in BA Norbert Krautenbacher,
+comparison to whitcomb, then rewrite this:
 
 ``Some computational aspects'' from \textcite[\S 4.2]{itip-statinf} on discrete models (Whitcomb!)***
 
@@ -640,20 +645,9 @@ is given in \cite{2011:rinderknecht}.
 ***end to other section?***
 
 
-\section{***JSTP paper***}
+\medskip
 
-
-\section{***BA Norbert Krautenbacher?***}
-
-
-\section{***Software***}
-
-
-\section{***Isipta'11 paper***}
-
-
-\section{***boatshape stuff?***}
-
+****par on what's next***
 
 
 
