diss: jstp section luck

--- a/defs.tex
+++ b/defs.tex
@@ -3,6 +3,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def\pdc{prior-data conflict}
+\def\ymodel{iLUCK-model}
+\def\nymodel{generalized iLUCK-model}
 
 \def\tra{\ensuremath{{\mbox{\!\scriptsize\textsf{T}}}}}
 \def\com{\ensuremath{{\mbox{\!\scriptsize\textsf{C}}}}}
@@ -90,3 +92,9 @@
 \newcommand{\B}{\operatorname{B}}   % Beta Function
 \newcommand{\dir}{\operatorname{Dir}}   % Dirichlet Distribution
 \newcommand{\po}{\operatorname{Po}}   % Poisson Distribution
+
+\newtheorem{theorem}{Theorem}[chapter]
+\newtheorem{definition}{Definition}[chapter]
+\newtheorem{example}{Example}[chapter]
+
+
