--- a/intro.tex
+++ b/intro.tex
@@ -47,7 +47,10 @@ and a paragraph from \textcite[\S 7]{itip-statinf}.
 Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf},
 which was written primarily by Gero Walter.****
 
-***Section~\ref{sec:jstp} is an abriged version of \textcite{Walter2009a}.***
+***Section~\ref{sec:jstp} is an abriged version of \textcite{Walter2009a},
+with a slight change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
+(most importantly, writing $\nn$ and $\yn$ for the canonical posterior parameters
+instead of $n^{(1)}$ and $y^{(1)}$, respectively).***
 
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a}.***
 
